- All Platforms
   + Fix crash from malicious torrent files with a piece size of zero
   + When creating new torrent files, change behavior that caused 
     "Multi tracker torrents are not allowed" warning on one tracker
   + Fix memory error when reading KTorrent's PEX messages
   + Fix small memory leaks
- Mac
   + Rephrase "data not fully available" to "remaining time unknown"
- Daemon
   + Fix crash when adding nonexistent torrents via transmission-remote
- GTK+
   + Fix crash from malicious torrent files with large creator fields
   + Fix error where some torrents opened via a web browser didn't appear

1.32 (2008/08/08)
http://trac.transmissionbt.com/query?group=component&milestone=1.32
- All Platforms
   + Fix a bug introduced in 1.30 that caused poor tracker communication
   + Creating torrent files for files >= 2 GB will result in 2 MB pieces
- Mac
   + Fix bug where the proxy type was changed from SOCKS5 to SOCKS4 on launch

1.31 (2008/08/06)
http://trac.transmissionbt.com/query?group=component&milestone=1.31
- All Platforms
   + Fix a crash caused by certain torrent files

1.30 (2008/08/05)
http://trac.transmissionbt.com/query?group=component&milestone=1.30
- All Platforms
   + The "Clutch" web interface is now bundled with Transmission (as a beta)
   + Ability to add and remove tracker addresses
   + Ability to create torrent files with multiple tracker addresses
   + Added support for HTTP/FTP Seeding (GetRight style)
   + Added proxy support for communicating with trackers
   + Allow torrent creation with no tracker address (required by some trackers)
   + New JSON-RPC protocol for clients to interact with the backend
- Daemon
   + transmission-daemon and transmission-remote were rewritten from scratch
   + remote and daemon now support per-file priority & download flag settings
- Mac
   + Quick Look integration in the main window and inspector's file tab
   + Transfers can be dragged to different groups